# ascii_game

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh
include/engine/: Renderer.hpp
src/: CMakeLists.txt  main.cpp
src/engine/: Renderer.cpp
tests/: CMakeLists.txt  test_main.cpp  test_renderer.cpp
